applications/CoSimulationApplication/custom_external_libraries/CoSimIO/co_sim_io/fortran/co_sim_io.f90

      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_Info_GetBool (I_Info, I_Key) BIND(C, NAME="CoSimIO_Info_GetBool")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE                                :: I_Info
                  CHARACTER(len=1, KIND=c_char), DIMENSION(*)              :: I_Key
              END FUNCTION CoSimIO_Info_GetBool            
            
      
              type(c_ptr) FUNCTION CoSimIO_Info_GetString (I_Info, I_Key) BIND(C, NAME="CoSimIO_Info_GetString")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE                                   :: I_Info
                  CHARACTER(LEN = 1, KIND=c_char), DIMENSION(*)               :: I_Key
                  
              END FUNCTION CoSimIO_Info_GetString           
            
      
              TYPE(CoSimIO_Info) FUNCTION CoSimIO_Info_GetInfo (I_Info, I_Key) BIND(C, NAME="CoSimIO_Info_GetInfo")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info),VALUE                                  :: I_Info
                  CHARACTER(len=1, KIND=c_char) , DIMENSION(*)              :: I_Key
              END FUNCTION CoSimIO_Info_GetInfo
            
            
              SUBROUTINE CoSimIO_Info_SetInt(I_Info, I_Key, I_Value) BIND(C, NAME='CoSimIO_Info_SetInt')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), INTENT(IN), VALUE                             :: I_Info
                  CHARACTER(len=1, KIND=c_char), DIMENSION(*) , INTENT(IN)          :: I_Key 
                  INTEGER(KIND = c_int), INTENT(IN), VALUE                          :: I_Value
              END SUBROUTINE CoSimIO_Info_SetInt
            
            
              SUBROUTINE CoSimIO_Info_SetDouble(I_Info, I_Key, I_Value) BIND(C, NAME='CoSimIO_Info_SetDouble')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), INTENT(IN), VALUE                     :: I_Info
                  CHARACTER(len=1, KIND=c_char), DIMENSION(*) , INTENT(IN)                :: I_Key 
                  REAL(KIND = c_double), INTENT(IN), VALUE                  :: I_Value
              END SUBROUTINE CoSimIO_Info_SetDouble
            
            
              SUBROUTINE CoSimIO_Info_SetBool(I_Info, I_Key, I_Value) BIND(C, NAME='CoSimIO_Info_SetBool')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), INTENT(IN), VALUE           :: I_Info
                  CHARACTER(len=1, KIND=c_char) , DIMENSION(*), INTENT(IN)      :: I_Key 
                  INTEGER(KIND = c_int), INTENT(IN), VALUE        :: I_Value
              END SUBROUTINE CoSimIO_Info_SetBool
            
            
              SUBROUTINE CoSimIO_Info_SetString(I_Info, I_Key, I_Value) BIND(C, NAME='CoSimIO_Info_SetString')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), INTENT(IN),VALUE              :: I_Info
                  CHARACTER(KIND=c_char), INTENT(IN)       :: I_Key(*)
                  CHARACTER( KIND=c_char), INTENT(IN)       :: I_Value(20)
              END SUBROUTINE CoSimIO_Info_SetString
            
            
              SUBROUTINE CoSimIO_Info_SetInfo(I_Info, I_Key, I_Value) BIND(C, NAME='CoSimIO_Info_SetInfo')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), INTENT(IN), VALUE           :: I_Info
                  CHARACTER(len=1, KIND=c_char), DIMENSION(*) , INTENT(IN)      :: I_Key 
                  TYPE(CoSimIO_Info), INTENT(IN), VALUE           :: I_Value
              END SUBROUTINE CoSimIO_Info_SetInfo
              
      ! END: co_sim_io_c_info.h interface  
      
      ! START: co_sim_io_c_model_part.h interface          
            ! NODE FUNCTIONS
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_Node_Id (I_Node) BIND(C, NAME="CoSimIO_Node_Id")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node
                  TYPE(CoSimIO_Node), VALUE                                :: I_Node
              END FUNCTION CoSimIO_Node_Id

              REAL(KIND=c_double) FUNCTION CoSimIO_Node_X (I_Node) BIND(C, NAME="CoSimIO_Node_X")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node
                  TYPE(CoSimIO_Node), VALUE                                :: I_Node
              END FUNCTION CoSimIO_Node_X

              REAL(KIND=c_double) FUNCTION CoSimIO_Node_Y (I_Node) BIND(C, NAME="CoSimIO_Node_Y")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node
                  TYPE(CoSimIO_Node), VALUE                                :: I_Node
              END FUNCTION CoSimIO_Node_Y

              REAL(KIND=c_double) FUNCTION CoSimIO_Node_Z (I_Node) BIND(C, NAME="CoSimIO_Node_Z")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node
                  TYPE(CoSimIO_Node), VALUE                                :: I_Node
              END FUNCTION CoSimIO_Node_Z

              REAL(KIND=c_double) FUNCTION CoSimIO_Node_Coordinate (I_Node, I_Index) BIND(C, NAME="CoSimIO_Node_Coordinate")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node
                  TYPE(CoSimIO_Node), VALUE                               :: I_Node
                  INTEGER , VALUE                                         :: I_Index
              END FUNCTION CoSimIO_Node_Coordinate
      
              !ELEMENT FUNCTIONS
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_Element_Id (I_Element) BIND(C, NAME="CoSimIO_Element_Id")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Element
                  TYPE(CoSimIO_Element), VALUE                                :: I_Element
              END FUNCTION CoSimIO_Element_Id
      
              INTEGER(KIND(CoSimIO_ElementType)) FUNCTION CoSimIO_Element_Type (I_Element) BIND(C, NAME="CoSimIO_Element_Type")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Element , CoSimIO_ElementType
                  TYPE(CoSimIO_Element), VALUE                                :: I_Element
              END FUNCTION CoSimIO_Element_Type
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_Element_NumberOfNodes (I_Element) BIND(C, NAME="CoSimIO_Element_NumberOfNodes")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Element
                  TYPE(CoSimIO_Element), VALUE                                :: I_Element
              END FUNCTION CoSimIO_Element_NumberOfNodes
      
              TYPE(CoSimIO_Node) FUNCTION CoSimIO_Element_GetNodeByIndex (I_Element,I_Index) 
     &                                                BIND(C, NAME="CoSimIO_Element_GetNodeByIndex")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node, CoSimIO_Element
                  TYPE(CoSimIO_Element), VALUE                                :: I_Element
                  INTEGER , VALUE                                             :: I_Index
              END FUNCTION CoSimIO_Element_GetNodeByIndex
      
              !MODELPART FUNCTIONS
                
            
      
              TYPE(CoSimIO_ModelPart) FUNCTION CoSimIO_CreateModelPart (I_Name) BIND(C, NAME="CoSimIO_CreateModelPart")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  CHARACTER(KIND=c_char), INTENT(IN)       :: I_Name(*)
              END FUNCTION CoSimIO_CreateModelPart
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_FreeModelPart (I_ModelPart) BIND(C, NAME="CoSimIO_FreeModelPart")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
              END FUNCTION CoSimIO_FreeModelPart
      
              type(c_ptr) FUNCTION CoSimIO_ModelPart_Name (I_ModelPart) BIND(C, NAME="CoSimIO_ModelPart_Name")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
              END FUNCTION CoSimIO_ModelPart_Name
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_ModelPart_NumberOfNodes (I_ModelPart) 
     &                                                    BIND(C, NAME="CoSimIO_ModelPart_NumberOfNodes")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
              END FUNCTION CoSimIO_ModelPart_NumberOfNodes
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_ModelPart_NumberOfLocalNodes (I_ModelPart) 
     &                                                    BIND(C, NAME="CoSimIO_ModelPart_NumberOfLocalNodes")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
              END FUNCTION CoSimIO_ModelPart_NumberOfLocalNodes
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_ModelPart_NumberOfGhostNodes (I_ModelPart) 
     &                                                    BIND(C, NAME="CoSimIO_ModelPart_NumberOfGhostNodes")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
              END FUNCTION CoSimIO_ModelPart_NumberOfGhostNodes
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_ModelPart_NumberOfElements (I_ModelPart) 
     &                                                    BIND(C, NAME="CoSimIO_ModelPart_NumberOfElements")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
              END FUNCTION CoSimIO_ModelPart_NumberOfElements
      
              TYPE(CoSimIO_Node) FUNCTION CoSimIO_ModelPart_GetNodeByIndex (I_ModelPart,I_Index) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_GetNodeByIndex")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
                  INTEGER , VALUE                                               :: I_Index
              END FUNCTION CoSimIO_ModelPart_GetNodeByIndex
      
              TYPE(CoSimIO_Node) FUNCTION CoSimIO_ModelPart_GetLocalNodeByIndex (I_ModelPart,I_Index) 
     &                                                BIND(C, NAME="CoSimIO_ModelPart_GetLocalNodeByIndex")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Node, CoSimIO_ModelPart
                  TYPE(CoSimIO_ModelPart), VALUE                                :: I_ModelPart
                  INTEGER , VALUE                                               :: I_Index
              END FUNCTION CoSimIO_ModelPart_GetLocalNodeByIndex
